--- a/PrintSystem.BLL/PrintSystem.BLL.csproj
+++ b/PrintSystem.BLL/PrintSystem.BLL.csproj
@@ -10,4 +10,17 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PrintSystem.Models\PrintSystem.Models.csproj" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\PrintSystem.Models\PrintSystem.Models.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\PrintSystem.Models\PrintSystem.Models.csproj" />
+		<ProjectReference Include="..\PrintSystem.DAL\PrintSystem.DAL.csproj" />
+	</ItemGroup>
+
 </Project>
