--- a/PrintSystem.DAL/PrintSystem.DAL.csproj
+++ b/PrintSystem.DAL/PrintSystem.DAL.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\PrintSystem.Models\PrintSystem.Models.csproj" />
+	</ItemGroup>
+
 </Project>
