--- a/MVC_PrintSystem/MVC_PrintSystem.csproj
+++ b/MVC_PrintSystem/MVC_PrintSystem.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PrintSystem.DAL\PrintSystem.DAL.csproj" />
     <ProjectReference Include="..\PrintSystem.Models\PrintSystem.Models.csproj" />
   </ItemGroup>
 
