Changed connections string.

--- a/WebAPI_PrintSystem/appsettings.json
+++ b/WebAPI_PrintSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mysql-printsystem-free.mysql.database.azure.com;Port=3306;Database=PrintSystemDB;Uid=printsystemadmin;Pwd=AdminHevs01;SslMode=Required;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PrintSystemDB;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
