--- a/MVC_PrintSystem/appsettings.json
+++ b/MVC_PrintSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "WebAPI": {
-    "BaseUrl": "https://localhost:7048/"
+    "BaseUrl": "https://webapiprintsystem1-b4ekbwacckhja8cy.switzerlandnorth-01.azurewebsites.net/api"
   },
   "Logging": {
     "LogLevel": {
