--- a/PrintSystem.DAL/PrintSystem.DAL.csproj
+++ b/PrintSystem.DAL/PrintSystem.DAL.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
-
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
@@ -14,5 +13,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
-</Project>
 
+	<ItemGroup>
+		<ProjectReference Include="..\PrintSystem.Models\PrintSystem.Models.csproj" />
+	</ItemGroup>
+</Project>
